- [nvr_core][auth] Store refresh token in db. - [nvr_core][login] Refresh token and API.
